# android-measuring-tool

./: .gitignore  Motivation.txt  README.md  Testicaset.docx  import-summary.txt  settings.gradle
Testaus/: Testitulokset_1.docx  Testitulokset_2.docx  Testitulokset_3.docx
app/: CMakeLists.txt  build.gradle  local.properties
app/src/androidTest/java/sop/augmentedandroids/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/sop/augmentedandroids/: MainActivity.java  MeasObjDetector.java  Measurements.java  RefObjDetector.java  SettingsActivity.java
app/src/main/res/layout/: activity_main.xml  settings.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/sop/augmentedandroids/: ExampleUnitTest.java
graphs/: Class_UML.xcf
openCVLibrary24131/: build.gradle
openCVLibrary24131/src/main/: AndroidManifest.xml
openCVLibrary24131/src/main/java/org/opencv/contrib/: Contrib.java
openCVLibrary24131/src/main/java/org/opencv/core/: Core.java
openCVLibrary24131/src/main/java/org/opencv/imgproc/: Imgproc.java
